# turboquant-playground

./: .amlignore  .gitattributes  .gitignore  PLAN.md  README.md  TODO.md  pyproject.toml  requirements.txt
benchmarks/: __init__.py  benchmark_attention_micro.py  benchmark_attention_micro_tc.py  benchmark_cache_memory.py  benchmark_generate.py  benchmark_nuq.py  benchmark_qjl.py  benchmark_qjl_direct.py  benchmark_qwen_turbo.py  benchmark_rotation_quant.py  benchmark_turbo_cache.py  report_m1.py  report_m10.py  report_m11.py  report_m12.py  report_m13.py  report_m14.py  report_m15.py  report_m16.py  report_m2.py  report_m3.py  report_m4.py  report_m5.py  report_m6.py  report_m7.py  report_m8.py  report_m9.py
kernels/: __init__.py  int4_logits_tc_triton.py  int4_logits_triton.py  int4_values_triton.py
results/: baseline.csv  coord_magnitude.csv  kv_bytes.csv  nvml_decode.csv  op_breakdown.csv  pytest_m16.txt  pytest_m2.txt  pytest_m3.txt  pytest_m4.txt  pytest_m5.txt  pytest_m6.txt  pytest_m7.txt  retrieval_recall.csv  rotation_latency.csv  rotation_quant_error.csv  runs.md  turbo_e2e.csv  turbo_e2e_earlylayer.csv  turbo_e2e_outliers.csv  turbo_e2e_perchannel.csv  turbo_e2e_prerope.csv  turbo_e2e_qjl.csv  turbo_e2e_sink.csv  turbo_e2e_valuegroup.csv  turbo_e2e_wikitext.csv  turbo_kernels.csv  turbo_kernels_decode.csv  turbo_kernels_tc.csv  turbo_layer_kl.csv  turbo_memory_kv.csv  turbo_mse.csv  turbo_nuq.csv  turbo_ops.csv  turbo_ops_qjl.csv  turbo_prod.csv  turbo_prod_iperr.csv  turbo_qjl_direct.csv  turbo_qjl_direct_hist.csv  turbo_recon.csv
tests/: conftest.py  (+15 more)
(+77 files in other folders)
