[project]
name = "turbo-kv-lab"
version = "0.1.0"
description = "TurboQuant-style rotated low-bit KV cache: implement and profile on A100."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# Installed in-job on the A100 image; locally optional.
gpu = [
    "torch>=2.2",
    "transformers>=4.44",
    "accelerate>=0.30",
    "triton>=2.2",
]
aml = [
    "azure-ai-ml>=1.12",
    "azure-identity>=1.15",
]
profiling = [
    "nvidia-ml-py>=12.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["turbo_kv*", "kernels*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
